# rocky_mini

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  agents.local.md  decisions.md  plan.md  pyproject.toml
docs/: bring-up.md  hardware-audit.md  tutorial.md
finetune/: Modelfile  README.md  build_dataset.py  eval.py  make_seed.py  mine_book.py  neutral.py  synth.py  train.py
finetune/data/: .gitignore  baseline_stock_turn.txt  rocky_dialogues.jsonl  schema.md
rocky_mini/: __init__.py  app.py  config.py  main.py  sim_brain.py  turn.py
rocky_mini/assets/models/: README.md
rocky_mini/audio/: __init__.py  chords.py  dsp.py  input.py  io.py  output.py  vad.py
rocky_mini/brain/: __init__.py  auditor.py  chunker.py  curiosity.py  llm.py  naivety.py  persona.py  reflection.py  tics.py  tools.py
rocky_mini/memory/: __init__.py  models.py  store.py
rocky_mini/motion/: __init__.py  emotes.py  idle.py  manager.py  pose.py  wobble.py
rocky_mini/speech/: __init__.py  stt.py  tts.py
rocky_mini/static/: app.js  index.html  style.css
scripts/: check_kv_reuse.py  gate_jitter.py  make_canned.py  measure_latency.py  profile_budget.py
server/: README.md  app.py  requirements.txt
tests/: test_api.py  test_audio_input.py  test_build_dataset.py  test_character.py  test_chords.py  test_chunker.py  test_dsp.py  test_eval_gate.py  test_hardware_seam.py  test_llm.py  test_llm_backend.py  test_memory.py  test_mine_book.py  test_mixer.py  test_motion.py  test_naivety.py  test_persona.py  test_server.py  test_speech.py  test_synth.py  test_tics.py  test_tools.py  test_turn.py
tests/integration/: test_sim_e2e.py
tests/ui/: README.md  pw-rocky-ui.js
