[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocky_mini"
version = "0.1.0"
description = "Rocky (Project Hail Mary) conversation app for Reachy Mini: a curious Eridian who learns and remembers, fully local zero-API-cost stack."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TJ" }]

# Everything Rocky needs at runtime on the robot is a core dependency: the
# dashboard installs apps with plain `pip install` (no extras), so anything in
# an extra silently never reaches the robot (decisions.md #8, audit D3). The
# reachy-mini SDK itself stays an extra: the daemon pre-installs it in the
# shared apps_venv, and the sim/test path must not require it. All real-client
# imports remain lazy and guarded, so tests still run with none of them usable.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    # Local LLM client (OpenAI-compatible, pointed at Ollama) + HTTP.
    "openai>=1.30",
    "httpx>=0.27",
    # VAD: the Silero ONNX model is vendored (assets/models/) and run with
    # onnxruntime directly. The silero-vad package is NOT a dependency: since
    # v6 it drags in torch + CUDA, gigabytes the CM4 cannot fit (decision 11).
    "onnxruntime>=1.17",
]
keywords = ["reachy-mini-app"]

[project.optional-dependencies]
# Physical robot / SDK integration (dev PCs; the robot's apps_venv has it already).
robot = ["reachy-mini"]
# Developer / local-audio tooling.
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12", "sounddevice>=0.4.6"]

# Dashboard entry point: pip install -e . makes the app dashboard-visible.
[project.entry-points."reachy_mini_apps"]
rocky_mini = "rocky_mini.main:RockyMiniApp"

[project.scripts]
rocky-mini = "rocky_mini.main:cli"

[tool.setuptools.packages.find]
include = ["rocky_mini*"]

[tool.setuptools.package-data]
rocky_mini = ["static/*", "assets/canned/*", "assets/models/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
